merul_Dev/src/objects/BirthdayTraker__c.object
<CustomObject>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reminder_Date__c</fullName>
        <formula>IF( MONTH( TODAY() ) &gt;= MONTH(  DOB__c  ) &amp;&amp; DAY( TODAY() ) &gt;= DAY(  DOB__c  ) , DATE(year(TODAY())+1,month(DOB__c),day(DOB__c)) , DATE(year(TODAY()),month(DOB__c),day(DOB__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;New&quot;</defaultValue>
        <label>Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestMultiselect__c</fullName>
        <label>TestMultiselect</label>
        <picklist>
            <picklistValues>
                <fullName>ABC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KLM</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>BirthdayTraker</label>
    <nameField>
        <label>BirthdayTraker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BirthdayTrakers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>